Experimenting with axis flip and asset type

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_vox"
-version = "0.3.0"
+version = "0.5.0"
 authors = ["erasin <erasinoo@gmail.com>"]
 edition = "2021"
 description = "Load MagicaVoxel Vox file for bevy engine "
@@ -16,6 +16,7 @@ bevy_ecs = "0.6.0"
 bevy_app = "0.6.0"
 bevy_asset = "0.6.0"
 bevy_render = "0.6.0"
+bevy_reflect = "0.6.0"
 bevy_utils = "0.6.0"
 bevy_pbr = "0.6.0"
 bevy_scene = "0.6.0"
